# ai-threat-forensics-toolkit

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PROJECT.md  README.md  Untitled.ipynb  main.py  pyproject.toml  requirements-dev.txt  run_tests.py  url_risk_scorer.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: example_urls.txt  synthetic.csv
docs/: gui.md  technical.md
models/: .gitkeep  url_risk_model.joblib
reports/: evaluation_report.csv  evaluation_report.json  example_triage.csv
scripts/: evaluate_model.py  generate_synthetic_data.py  gui.py  train_model.py  triage_from_file.py
src/ai_threat_forensics_toolkit/: __init__.py
src/ai_threat_forensics_toolkit.egg-info/: PKG-INFO  SOURCES.txt
src/ai_threat_forensics_toolkit/ai/: model.py
src/ai_threat_forensics_toolkit/core/: __init__.py  url_risk_scorer.py
src/core/: __init__.py  url_risk_scorer.py
tests/: conftest.py  test_ai_model.py  test_url_risk_scorer.py
