[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-threat-forensics-toolkit"
version = "0.1.0"
description = "AI Threat Forensics Toolkit — URL risk scoring and triage tools"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [ { name = "gcasaldi" } ]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
extend-exclude = [".git", "__pycache__", "build", "dist", "venv"]
select = ["E", "F", "W", "C90", "I", "B"]
